--- a/app.config
+++ b/app.config
@@ -1,8 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
+<configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+        <section name="is2AdminClient.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+    </sectionGroup>
+</configSections>
 <appSettings>
 <add key="is2AdminClient.is2maintenance.Service1" value="http://wwwis2.fukutsu.co.jp/is2/is2Maintenance/Service1.asmx"/>
 <add key="is2AdminClient.is2oshirase.Service1" value="http://wwwis2.fukutsu.co.jp/is2/is2oshirase/Service1.asmx"/>
 <add key="HelpURL" value="http://wwwis2.fukutsu.co.jp/is2/manual/"/>
 <add key="is2AdminClient.is2oji.Service1" value="http://wwwis2.fukutsu.co.jp/is2/is2oji/Service1.asmx"/></appSettings>
+<startup><supportedRuntime version="v2.0.50727"/></startup><applicationSettings>
+        <is2AdminClient.Properties.Settings>
+            <setting name="is2AdminClient_is2maintenance_Service1" serializeAs="String">
+                <value>http://wwwis2.fukutsu.co.jp/is2/is2Maintenance/Service1.asmx</value>
+            </setting>
+            <setting name="is2AdminClient_is2oji_Service1" serializeAs="String">
+                <value>http://wwwis2.fukutsu.co.jp/is2/is2oji/Service1.asmx</value>
+            </setting>
+            <setting name="is2AdminClient_is2oshirase_Service1" serializeAs="String">
+                <value>http://wwwis2.fukutsu.co.jp/is2/is2oshirase/Service1.asmx</value>
+            </setting>
+        </is2AdminClient.Properties.Settings>
+    </applicationSettings>
 </configuration>
