--- a/app.config
+++ b/app.config
@@ -10,16 +10,16 @@
 <add key="is2AdminClient.is2oshirase.Service1" value="http://wwwis2.fukutsu.co.jp/is2/is2oshirase/Service1.asmx"/>
 <add key="HelpURL" value="http://wwwis2.fukutsu.co.jp/is2/manual/"/>
 <add key="is2AdminClient.is2oji.Service1" value="http://wwwis2.fukutsu.co.jp/is2/is2oji/Service1.asmx"/></appSettings>
-<startup><supportedRuntime version="v2.0.50727"/></startup><applicationSettings>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1"/></startup><applicationSettings>
         <is2AdminClient.Properties.Settings>
             <setting name="is2AdminClient_is2maintenance_Service1" serializeAs="String">
-                <value>http://wwwis2.fukutsu.co.jp/is2/is2Maintenance/Service1.asmx</value>
+                <value>http://is2-ap-2012r2.japaneast.cloudapp.azure.com/is2/is2Maintenance/Service1.asmx</value>
             </setting>
             <setting name="is2AdminClient_is2oji_Service1" serializeAs="String">
-                <value>http://wwwis2.fukutsu.co.jp/is2/is2oji/Service1.asmx</value>
+                <value>http://is2-ap-2012r2.japaneast.cloudapp.azure.com/is2/is2oji/Service1.asmx</value>
             </setting>
             <setting name="is2AdminClient_is2oshirase_Service1" serializeAs="String">
-                <value>http://wwwis2.fukutsu.co.jp/is2/is2oshirase/Service1.asmx</value>
+                <value>http://is2-ap-2012r2.japaneast.cloudapp.azure.com/is2/is2oshirase/Service1.asmx</value>
             </setting>
         </is2AdminClient.Properties.Settings>
     </applicationSettings>
