--- a/is2AdminClient.csproj
+++ b/is2AdminClient.csproj
@@ -24,7 +24,7 @@
     <WebReference_EnableLegacyEventingModel>true</WebReference_EnableLegacyEventingModel>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
-    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <OldToolsVersion>0.0</OldToolsVersion>
     <UpgradeBackupLocation />
     <PublishUrl>publish\</PublishUrl>
@@ -65,7 +65,7 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>false</Prefer32Bit>
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <OutputPath>bin\Release\</OutputPath>
@@ -90,19 +90,23 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <COMReference Include="AxGTABLE32V2Lib">
-      <Guid>{3BA63D60-AE52-11CF-968C-00000E4A0ADF}</Guid>
-      <VersionMajor>2</VersionMajor>
-      <VersionMinor>0</VersionMinor>
-      <Lcid>0</Lcid>
-      <WrapperTool>aximp</WrapperTool>
-    </COMReference>
     <COMReference Include="GTABLE32V2Lib">
       <Guid>{3BA63D60-AE52-11CF-968C-00000E4A0ADF}</Guid>
       <VersionMajor>2</VersionMajor>
       <VersionMinor>0</VersionMinor>
       <Lcid>0</Lcid>
       <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
+    </COMReference>
+    <COMReference Include="MSDATASRC">
+      <Guid>{7C0FFAB0-CD84-11D0-949A-00A0C91110ED}</Guid>
+      <VersionMajor>1</VersionMajor>
+      <VersionMinor>0</VersionMinor>
+      <Lcid>0</Lcid>
+      <WrapperTool>tlbimp</WrapperTool>
+      <Isolated>False</Isolated>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
     </COMReference>
     <COMReference Include="stdole">
       <Guid>{00020430-0000-0000-C000-000000000046}</Guid>
@@ -111,6 +115,10 @@
       <Lcid>0</Lcid>
       <WrapperTool>primary</WrapperTool>
     </COMReference>
+    <Reference Include="AxInterop.GTABLE32V2Lib, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>obj\Debug\AxInterop.GTABLE32V2Lib.dll</HintPath>
+    </Reference>
     <Reference Include="CharConvUtility">
       <Name>CharConvUtility</Name>
       <HintPath>CharConvUtility.dll</HintPath>
@@ -121,11 +129,6 @@
     <Reference Include="CrystalDecisions.Windows.Forms, Version=13.0.2000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.VisualBasic">
       <Name>Microsoft.VisualBasic</Name>
-    </Reference>
-    <Reference Include="MSDATASRC, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-      <SpecificVersion>False</SpecificVersion>
-      <EmbedInteropTypes>True</EmbedInteropTypes>
-      <HintPath>obj\Debug\MSDATASRC.dll</HintPath>
     </Reference>
     <Reference Include="System">
       <Name>System</Name>
@@ -556,14 +559,20 @@
     <None Include="稼動状況データ.xsx">
       <DependentUpon>稼動状況データ.xsd</DependentUpon>
     </None>
+    <None Include="送り状データ.xsc">
+      <DependentUpon>送り状データ.xsd</DependentUpon>
+    </None>
+    <None Include="送り状データ.xss">
+      <DependentUpon>送り状データ.xsd</DependentUpon>
+    </None>
     <None Include="送り状データ.xsx">
       <DependentUpon>送り状データ.xsd</DependentUpon>
     </None>
     <WebReferences Include="Web References\" />
-    <WebReferenceUrl Include="http://wwwis2.fukutsu.co.jp/is2/is2Maintenance/Service1.asmx">
+    <WebReferenceUrl Include="http://is2-ap-2012r2.japaneast.cloudapp.azure.com/is2/is2Maintenance/Service1.asmx">
       <RelPath>Web References\is2maintenance\</RelPath>
       <UrlBehavior>Dynamic</UrlBehavior>
-      <UpdateFromURL>http://wwwis2.fukutsu.co.jp/is2/is2Maintenance/Service1.asmx</UpdateFromURL>
+      <UpdateFromURL>http://is2-ap-2012r2.japaneast.cloudapp.azure.com/is2/is2Maintenance/Service1.asmx</UpdateFromURL>
       <ServiceLocationURL>
       </ServiceLocationURL>
       <CachedDynamicPropName>
@@ -571,10 +580,10 @@
       <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
       <CachedSettingsPropName>is2AdminClient_is2maintenance_Service1</CachedSettingsPropName>
     </WebReferenceUrl>
-    <WebReferenceUrl Include="http://wwwis2.fukutsu.co.jp/is2/is2oji/Service1.asmx">
+    <WebReferenceUrl Include="http://is2-ap-2012r2.japaneast.cloudapp.azure.com/is2/is2oji/Service1.asmx">
       <RelPath>Web References\is2oji\</RelPath>
       <UrlBehavior>Dynamic</UrlBehavior>
-      <UpdateFromURL>http://wwwis2.fukutsu.co.jp/is2/is2oji/Service1.asmx</UpdateFromURL>
+      <UpdateFromURL>http://is2-ap-2012r2.japaneast.cloudapp.azure.com/is2/is2oji/Service1.asmx</UpdateFromURL>
       <ServiceLocationURL>
       </ServiceLocationURL>
       <CachedDynamicPropName>
@@ -582,10 +591,10 @@
       <CachedAppSettingsObjectName>Settings</CachedAppSettingsObjectName>
       <CachedSettingsPropName>is2AdminClient_is2oji_Service1</CachedSettingsPropName>
     </WebReferenceUrl>
-    <WebReferenceUrl Include="http://wwwis2.fukutsu.co.jp/is2/is2oshirase/Service1.asmx">
+    <WebReferenceUrl Include="http://is2-ap-2012r2.japaneast.cloudapp.azure.com/is2/is2oshirase/Service1.asmx">
       <RelPath>Web References\is2oshirase\</RelPath>
       <UrlBehavior>Dynamic</UrlBehavior>
-      <UpdateFromURL>http://wwwis2.fukutsu.co.jp/is2/is2oshirase/Service1.asmx</UpdateFromURL>
+      <UpdateFromURL>http://is2-ap-2012r2.japaneast.cloudapp.azure.com/is2/is2oshirase/Service1.asmx</UpdateFromURL>
       <ServiceLocationURL>
       </ServiceLocationURL>
       <CachedDynamicPropName>
